[Fragment Game] Add ViewModel & Implement it

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Lifecycles
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 }
